--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <span class="time">00:00</span>
 
         </div>
-        <audio class="audio" src="/audio/em-cuoi-roi-a.mp3" ></audio>
+        <audio class="audio" src="./audio/em-cuoi-roi-a.mp3" ></audio>
         <div class="showLyric"></div>
     </div>
-    <script src="music.js"></script>
+    <script src="./music.js"></script>
 </body>
 </html>
