--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <div class="img-thumbnail">
             <img src="./image/hon-le-cua-em.jpg" alt="Em cưới rồi à">
         </div>
-        <div class="controls">
-            <button><i class="fa-solid fa-play"></i></button>
+
+        <div class="info">
+            <h4 class="song">Em cưới rồi à <span>- Thanh Hưng</span></h4>
         </div>
+        
         <div class="player">
             <span class="time">00:00</span>
             <div class="progress-bar">
@@ -22,12 +24,19 @@
                     <span></span>
                 </div>
             </div>
+            
             <span class="time">00:00</span>
 
+        </div>
+        <div class="controls">
+            <button class="step back"><i class="fa-solid fa-backward-step"></i></button>
+            <button class="play"><i class="fa-solid fa-play"></i></button>
+            <button class="step forward"><i class="fa-solid fa-forward-step"></i></button>
         </div>
         <audio class="audio" src="./audio/em-cuoi-roi-a.mp3" ></audio>
         <div class="showLyric"></div>
     </div>
+    <script src="./lyrics.js"></script>
     <script src="./music.js"></script>
 </body>
 </html>
