back-forward to song

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="container">
         <div class="img-thumbnail">
-            <img src="./image/hon-le-cua-em.jpg" alt="Em cưới rồi à">
+            <img class="image" src="./image/hon-le-cua-em.jpg" alt="Em cưới rồi à">
         </div>
 
         <div class="info">
-            <h4 class="song">Em cưới rồi à <span>- Thanh Hưng</span></h4>
+            <h4 class="song">Em cưới rồi à </h4>
+            <span class="singer"> - Thanh Hưng</span>
         </div>
         
         <div class="player">
